--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    
+    
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -9,6 +12,9 @@
       rel="stylesheet">
 
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- index.html -->
+
+
   </head>
   <body>
     <noscript>
@@ -16,5 +22,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest" onerror="console.error('Failed to load TensorFlow.js')"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest" onerror="console.error('Failed to load Teachable Machine Image')"></script>
   </body>
 </html>
