--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest" onerror="console.error('Failed to load TensorFlow.js')"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest" onerror="console.error('Failed to load Teachable Machine Image')"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
   </body>
 </html>
