--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest" onerror="console.error('Failed to load TensorFlow.js')"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest" onerror="console.error('Failed to load Teachable Machine Image')"></script>
   </body>
 </html>
