--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2878569982899682"
+     crossorigin="anonymous"></script>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- index.html -->
